# filterpy

./: .gitattributes  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  changelog.txt  creating_a_release.rst  license.txt  pypi-install.sh  pypi-test-install.sh  pyproject.toml  requirements-dev.txt  requirements.readthedocs..txt  requirements.readthedocs.txt  requirements.txt  setup.py
common/: __init__.py  helpers.py  test_discretization.py
common/tests/: test_discretization.py  test_helpers.py
conda/: conda_install.txt  meta.yaml
conda/filterpy/: bld.bat  build.sh  meta.yaml
docs/: conf.py  index.rst  make.bat
docs/common/: common.rst
docs/discrete_bayes/: discrete_bayes.rst
docs/gh/: GHFilter.rst  GHFilterOrder.rst  GHKFilter.rst  benedict_bornder_constants.rst  critical_damping_parameters.rst  least_squares_parameters.rst  optimal_noise_smoothing.rst
docs/hinfinity/: HInfinityFilter.rst
docs/kalman/: EnsembleKalmanFilter.rst  ExtendedKalmanFilter.rst  FixedLagSmoother.rst  IMMEstimator.rst  InformationFilter.rst  JulierSigmaPoints.rst  KalmanFilter.rst  MMAEFilterBank.rst  RTS_smoother.rst  Saver.rst  SquareRootFilter.rst  UnscentedKalmanFilter.rst  unscented_transform.rst
docs/leastsq/: LeastSquaresFilter.rst
docs/memory/: FadingMemoryFilter.rst
docs/monte_carlo/: resampling.rst
docs/stats/: stats.rst
examples/: GetRadar.py  RadarUKF.py  bearing_only.py  radar_sim.py
filterpy/: __init__.py  changelog.txt
filterpy/common/: __init__.py  discretization.py  helpers.py  kinematic.py  stats.py  test_discretization.py
filterpy/discrete_bayes/: __init__.py  discrete_bayes.py
filterpy/examples/: GetRadar.py  README.md  RadarEKF.py  RadarUKF.py  __init__.py  bearing_only.py  radar_sim.py
filterpy/gh/: __init__.py  gh_filter.py  test_gh.py
filterpy/hinfinity/: __init__.py  hinfinity_filter.py  test_hinfinity.py
filterpy/kalman/: CubatureKalmanFilter.py  EKF.py  IMM.py  JUKF.py  SUKF.py  SigmaPoints.py  UKF.py  __init__.py  ensemble_kalman_filter.py  fading_memory.py  fixed_lag_smoother.py  fixed_point_smoother.py  imm.py  information_filter.py  kalman_filter.py  mht.py  mmae.py  multi-EKF.py  (+13 more)
gh/: __init__.py  gh_filter.py  gh_tests.py  test_gh.py  untitled0.py
hinfinity/: __init__.py  hinfinity_filter.py  test_hinfinity.py
install/: MANIFEST.in  pypi-test-install.sh  setup.py
kalman/: .gitignore  EKF.py  GetRadar.py  RadarUKF.py  SigmaPoints.py  UKF.py  __init__.py  ensemble_kalman_filter.py  fading_memory.py  filter.py  information_filter.py  kalman_filter.py  rks_smoother.py  sigma_points.py  square_root.py  test_kf.py  test_rks.py  test_ukf.py  unscented_transform.py
leastsq/: __init__.py  least_squares.py  lsq_tests.py  test_lsq.py  tests.py
leastsquares/: LeastSquaresFilter.py
memory/: __init__.py  fading_memory.py  test_fm.py
monte_carlo/: resampling.py
stats/: __init__.py  stats.py
(+61 files in other folders)
